tests/diagnostics/catalog/snapshots/ir/IR0020.snap
error[IR0020]: IR_E_EXPECTED_TYPE
 --> tests/diagnostics/catalog/sources/ir/IR0020.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0020
  = help: keep IR validation diagnostics structured and catalog-backed
